testsuite/tests/parser/should_fail/unpack_inside_type.hs
module UnpackInsideType where

data T = T { t :: Maybe {-# UNPACK #-} Int }
