testsuite/tests/parser/should_fail/unpack_inside_type.stderr

unpack_inside_type.hs:3:25: error:
    {-# UNPACK #-} cannot appear inside a type.
